Style updates for stupid coaching

--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -14,7 +14,7 @@
 </div>
 
 <div>
-    <a href=""><%= link_to "Another Question?", ask_path %></a>
+    <a href="" class=""><%= link_to "Another Question?", ask_path %></a>
 </div>
 
 </div>
