--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,11 +1,11 @@
 <div class="container">
   <h1 class="title">Stupid Coaching</h1>
 
-  <form action="/answer">
+  <form action="/answer" class="form-control text-center">
     <label for="">Ask your coach anything:</label>
     <div class="input">
-      <input type="text" name="question">
-      <input type="submit" value="Ask!">
+      <input type="text" class="form-control" name="question">
+      <input type="submit" class="btn btn-dark" value="Ask!">
     </div>
   </form>
 </div>
