Style updates for stupid coaching

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,3 +54,8 @@
  /* input[type=submit] {
     color: red;
  } */
+
+ /* input[type=button] {
+    color: black;
+    text-decoration: none;
+ } */
