--- a/app/views/questions/answer.html.erb
+++ b/app/views/questions/answer.html.erb
@@ -14,7 +14,10 @@
 </div>
 
 <div>
-    <a href="" class=""><%= link_to "Another Question?", ask_path %></a>
+    <%# <a href="#link" class="btn btn-info" role="button">Link Button</a> %>
+
+    <button type="button" class="btn-lg btn-info"><%= link_to "Another Question?", ask_path %></button>
+
 </div>
 
 </div>
